<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">Constantinople is the largest city in Turkey.</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="next_question_button">next</string>
    <string name="prev_question_button">prev</string>
    <string name="question_oceans">The Pacific Ocean is larger than
    the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
    and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.
               </string>
    <string name="question_americas">The Amazon River is the longest river
    in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\’s oldest and deepest
    freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">Cheat</string>

</resources>
